# runbox

./: .gitignore  README.md  pyproject.toml  reference.ipynb
.github/workflows/: update-chart.yml
src/: auth.py  main.py  models.py  plot.py  style.py
src/runbox/: auth.py  main.py  plot.py  style.py
tests/: test_style.py
