[project]
name = "runbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garminconnect (>=0.2.28,<0.3.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "runbox", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
