[project]
name = "runbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Franziska Witzel",email = "franziska.witzel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "garminconnect (>=0.2.28,<0.3.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "cryptography (>=45.0.5,<46.0.0)"
]

[tool.poetry]
packages = [{include = "runbox", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"  # <-- Tell pytest to add src/ to sys.path
]

[tool.poetry.scripts]
update-chart = "runbox.main:update_chart"
